# OmniSync

./: .gitignore  README.md  clipboard_history.db  omnisync.py  pyproject.toml  server.py
android_node/: gradle.properties  settings.gradle.kts
android_node/app/: build.gradle.kts
android_node/app/src/androidTest/java/com/ahmednaeem786/omnisync/: ExampleInstrumentedTest.kt
android_node/app/src/main/: AndroidManifest.xml
android_node/app/src/main/java/com/ahmednaeem786/omnisync/: Config.kt  CryptoHelper.kt  MainActivity.kt  OmniSyncService.kt
android_node/app/src/main/java/com/ahmednaeem786/omnisync/network/: CloudAPI.kt  CloudListener.kt
android_node/app/src/main/java/com/ahmednaeem786/omnisync/ui/theme/: Color.kt  Theme.kt  Type.kt
android_node/app/src/main/res/values/: strings.xml  themes.xml
android_node/app/src/test/java/com/ahmednaeem786/omnisync/: ExampleUnitTest.kt
android_node/gradle/: libs.versions.toml
android_node/gradle/wrapper/: gradle-wrapper.properties
laptop_node/: __init__.py  main.py  omnisync.py  requirements.txt
laptop_node/core/: clipboard.py  network.py  signaling.py
laptop_node/os_tools/: __init__.py  crypto.py
network/: __init__.py  api_client.py  ws_listener.py
